# template2

./: CMakeLists.txt  README.md  example.config
src/: main.cpp
src/blocks/: block.cpp
src/debug/: error.cpp
src/include/: block.h  configuration.h  error.h  layer_info.h  log.hpp  rstring.h
src/utils/: configuration.cpp  rstring.cpp
